examples/smlfmt-1.2.0/test/fail/unexpected-eof-10.sml
structure X: sig end = struct
